# async-tasks

./: .gitignore  README.md  README_ZH.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0e37faa4bcd4_.py  9fc822059594_create_task_table.py
project/: __init__.py  celery_utils.py  config.py  constants.py  database.py  exceptions.py
project/async_tasks/: __init__.py  models.py  schemas.py  tasks.py  views.py
project/async_tasks/templates/: form.html
tests/: conftest.py
tests/test_async_tasks/: test_views.py
