[tool.poetry]
name = "async-tasks"
version = "0.1.0"
description = ""
authors = ["Joe Huang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.108.0"
uvicorn = "0.25.0"
celery = "5.3.6"
redis = "5.0.1"
flower = "2.0.1"
sqlalchemy = "2.0.25"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"
watchfiles = "0.21.0"
requests = "^2.32.3"
jinja2 = "3.1.2"
voluptuous = "^0.15.2"
asyncpg = "^0.30.0"
pytest = "^8.2"
httpx = "0.26.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
